Fix Vostok, Voskhod masses.

--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
@@ -55,7 +55,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 2.042 // + 450kg ablator
+	mass = 1.809 // + 450kg ablator + supplied = 2457kg
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -103,7 +103,7 @@ PART
 	{
 		name = ModuleFuelTanks
 		volume = 632.28
-		type = Fuselage
+		type = ServiceModule
 		basemass = -1
 		TANK
 		{
