--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
@@ -53,7 +53,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 2.042 // + 450kg ablator
+	mass = 1.809 // + 450kg ablator
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -101,7 +101,7 @@ PART
 	{
 		name = ModuleFuelTanks
 		volume = 189.59
-		type = Fuselage
+		type = ServiceModule
 		basemass = -1
 		TANK
 		{
