Fix typo in comment

--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
@@ -63,7 +63,7 @@ PART
 	breakingTorque = 250
 	fuelCrossFeed = True
 
-	heatShieldDiameter = 4.243 // really 2.3, but more use ablator
+	heatShieldDiameter = 4.243 // really 2.3, but tweak to apply more ablator
 	heatShieldTag = Mercury
 	resetHeatShieldAblator = true
 	resetHeatShieldMass = false
