Star-13E (Gemini Retro) should probably be CTPB.

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetro.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetro.cfg
@@ -87,7 +87,7 @@ PART
 
 			PROPELLANT
 			{
-				name = PSPC
+				name = CTPB
 				ratio = 1
 				DrawGauge = True
 			}
@@ -130,8 +130,8 @@ PART
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 14.09
-		type = PSPC
+		volume = 13.8512
+		type = CTPB
 		basemass = -1
 	}
 
