Tweak GeminiBDB IVA
Pilots were floating off their seat, heads were poking out of the capsule,
and interior point of view was too high for both seeing out and looking
a controls

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
@@ -54,7 +54,7 @@ PART
 
 	INTERNAL
 	{
-		name = FASAGeminiInt2
+		name = ROC-GeminiBDB-Internal
 	}
 
 	MODULE
@@ -385,3 +385,22 @@ PART
 {
 	!RESOURCE:HAS[~name[Ablator],~name[CharredAblator]],*{}
 }
+
+
+// RO itself rescales FASA's Internal. ROC copied FASA's Internal and
+// kept its name, presumably to inherit that rescaling; but it's not
+// quite right for the BDB capsule. So make our own copy we can tweak
+// without affecting the original
++INTERNAL[FASAGeminiInt2]:BEFORE[RealismOverhaul]
+{
+	@name = ROC-GeminiBDB-Internal
+	%scaleAll = 1.219, 1.194, 1.219
+
+	@MODULE[InternalSeat],*
+	{
+		%kerbalScale = 1.1, 1.1, 1.1
+		%kerbalOffset = 0.0, -0.1, 0.0
+		%kerbalEyeOffset = 0.0, 0.0, 0.0
+	}
+}
+
