--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBay.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBay.cfg
@@ -35,13 +35,18 @@ PART
 	crashTolerance = 6
 	breakingForce = 200
 	breakingTorque = 200
-	maxTemp = 1273
-	skinMaxTemp = 2383
-	heatConductivity = 0.04
-	thermalMassModifier = 5.0 
-	emissiveConstant = 0.95
 	bulkheadProfiles = size2
 	fuelCrossFeed = True
+
+	heatConductivity = 0.25		//all conductivity
+	skinInternalConductionMult = 0.001	//skin-to-int conductivity
+	skinMassPerArea = 8.25 //1 mm Rene 41
+	thermalMassModifier = 2.0
+	emissiveConstant = 0.95		//matte black
+
+	maxTemp = 773
+	skinMaxTemp = 2000
+
 	tags = base cabin (can outpost passenger statio tour tuna
 
 
