--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBody.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBody.cfg
@@ -42,21 +42,31 @@ PART
 	//FAR automatically sets wing mass at 312 kg + 62 kg per wing
 	//Skid mass 22 kg each (guess)
 	//Fuselage mass: 2841 kg
+	
 	mass = 2.841
 	dragModelType = default
 	maximum_drag = 0.1
 	minimum_drag = 0.1
 	angularDrag = 2
 	crashTolerance = 25
-	maxTemp = 900
-	skinMaxTemp = 2383
 	explosionPotential = 0.1
 	fuelCrossFeed = True
 	CrewCapacity = 1
 	bulkheadProfiles = size1, mk3
-	heatConductivity = 0.1
-	thermalMassModifier = 5.0 
-	emissiveConstant = 0.95
+	
+	//Thermal Stuff
+	//Structure and skin made of Rene 41 (max temp 1144)
+	//Belly coated with Molybdenum (max temp ~2000)
+	//Nose made of graphite
+	//Very high emissivity paint applied to maximize radiation
+	heatConductivity = 0.25		//all conductivity
+	skinInternalConductionMult = 0.001	//skin-to-int conductivity
+	skinMassPerArea = 8.25 //1 mm Rene 41
+	thermalMassModifier = 2.0
+	emissiveConstant = 0.95		//matte black
+
+	maxTemp = 773	//delicate, lower int temp
+	skinMaxTemp = 2000
 
 	vesselType = Ship
 
