--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaDragChute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaDragChute.cfg
@@ -34,10 +34,18 @@ PART
 	dragModelType = default
 	angularDrag = 2
 	crashTolerance = 12
-	maxTemp = 1600
 	breakingForce = 18
 	breakingTorque = 25
 	stageOffset = -1
+
+	heatConductivity = 0.25		//all conductivity
+	skinInternalConductionMult = 0.001	//skin-to-int conductivity
+	skinMassPerArea = 8.25 //1 mm Rene 41
+	thermalMassModifier = 2.0
+	emissiveConstant = 0.95		//matte black
+
+	maxTemp = 773
+	skinMaxTemp = 2000
 
 	stagingIcon = PARACHUTES
 
