--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaFuelTank.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaFuelTank.cfg
@@ -29,8 +29,16 @@ PART
 	crashTolerance = 6
 	breakingForce = 200
 	breakingTorque = 200
-	maxTemp = 900
-	skinMaxTemp = 2383
+
+	heatConductivity = 0.25		//all conductivity
+	skinInternalConductionMult = 0.001	//skin-to-int conductivity
+	skinMassPerArea = 8.25 //1 mm Rene 41
+	thermalMassModifier = 2.0
+	emissiveConstant = 0.95		//matte black
+
+	maxTemp = 773
+	skinMaxTemp = 2000
+
 	bulkheadProfiles = size2
 	tags = fuel tank
 
