--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidFront.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidFront.cfg
@@ -28,18 +28,24 @@ PART
 	description = Attach this under the nose. Don’t forget to add this to the GEAR Action group so you can toggle it with the G key. Fiddle with the skid controls at your own risk since they function correctly as is.
 
 	mass = 0.022
-	thermalMassModifier = 4.0 
-	emissiveConstant = 0.95
 	dragModelType = default
 	maximum_drag = 0.3
 	minimum_drag = 0.2
 	angularDrag = 1
-	maxTemp = 1273
-	skinMaxTemp = 2383
 	crashTolerance = 175
 	breakingForce = 250
 	breakingTorque = 250
 	PhysicsSignificance = 0
+
+	heatConductivity = 0.25		//all conductivity
+	skinInternalConductionMult = 0.001	//skin-to-int conductivity
+	skinMassPerArea = 8.25 //1 mm Rene 41
+	thermalMassModifier = 2.0
+	emissiveConstant = 0.95		//matte black
+
+	maxTemp = 1144
+	skinMaxTemp = 2000
+
 	bulkheadProfiles = srf
 	tags = aero (air aircraft ground plane roll takeoff taxi wheel
 
