--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidRear.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidRear.cfg
@@ -29,18 +29,24 @@ PART
 
 
 	mass = 0.022
-	thermalMassModifier = 4.0 
-	emissiveConstant = 0.95
 	dragModelType = default
 	maximum_drag = 0.0
 	minimum_drag = 0.02
 	angularDrag = 0.0
-	maxTemp = 1273
-	skinMaxTemp = 2383
 	crashTolerance = 175
 	breakingForce = 250
 	breakingTorque = 250
 	PhysicsSignificance = 0
+
+	heatConductivity = 0.25		//all conductivity
+	skinInternalConductionMult = 0.001	//skin-to-int conductivity
+	skinMassPerArea = 8.25 //1 mm Rene 41
+	thermalMassModifier = 2.0
+	emissiveConstant = 0.95		//matte black
+
+	maxTemp = 1144
+	skinMaxTemp = 2000
+
 	bulkheadProfiles = srf
 	tags = aero (air aircraft ground plane roll takeoff taxi wheel
 
