--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaWingLeft.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaWingLeft.cfg
@@ -33,9 +33,6 @@ PART
 	description = Left wing and rudder of the DynaSoar. Limit its aero functionality only to Yaw. Also limit its RCS functionality to Roll only via the actuation toggles. Rudder fins can be used as an airbrake. Add them to the Brakes action group.
 
 	mass = 0.600
-	thermalMassModifier = 4.0
-	heatConductivity = 0.1
-	emissiveConstant = 0.95
 	//dragModelType = none
 	//maximum_drag = 0.02
 	//minimum_drag = 0.02
@@ -45,8 +42,14 @@ PART
 	breakingForce = 999
 	breakingTorque = 999
 
-	maxTemp = 1273
-	skinMaxTemp = 2383
+	heatConductivity = 0.25		//all conductivity
+	skinInternalConductionMult = 0.001	//skin-to-int conductivity
+	skinMassPerArea = 8.25 //1 mm Rene 41
+	thermalMassModifier = 2.0
+	emissiveConstant = 0.95		//matte black
+
+	maxTemp = 1144
+	skinMaxTemp = 2000
 
 	bodyLiftMultiplier = 2
 
