Update tags and internals

--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaAftBayMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaAftBayMoroz.cfg
@@ -51,7 +51,7 @@ PART
 	maxTemp = 773	//delicate, lower int temp
 	skinMaxTemp = 1144	//Not reentry rated, but expected to survive some pretty aggressive atmospheric manuevers
 
-	tags = X20 Moroz fuel fueltank ?lfo liquid oxidizer propellant rocket tank
+	tags = X20 x-20 dynasoar liquid hydrogen liquid oxygen storage fuel cell aircraft dynamic soarer
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
 
