--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaBayMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaBayMoroz.cfg
@@ -28,7 +28,7 @@ PART
 	subcategory = 0
 	title = Dynasoar Cargo Bay
 	manufacturer = Boeing
-	description = Cargo bay for Dynasoar, to carry extra equipment, carry something to orbit, or bring something back...
+	description = Cargo bay for Dynasoar, to carry extra equipment, a payload, or bring something back...
 	attachRules = 1,1,1,1,1
 	
 	
@@ -56,7 +56,7 @@ PART
 	maxTemp = 773	//delicate, lower int temp
 	skinMaxTemp = 2000
 
-	tags = X20 Moroz contain convey equipment freight hold hollow payload (stor transport utility
+	tags = X20 x-20 dynasoar bay cargo payload aircraft dynamic soarer
 
 
 	MODULE
