--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaButtMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaButtMoroz.cfg
@@ -52,7 +52,7 @@ PART
 	maxTemp = 773	//delicate, lower int temp
 	skinMaxTemp = 2000
 
-	tags = X20 Moroz base contain outpost passenger statio (stor tour
+	tags = X20 x-20 dynasoar equipment compartment fuel cell service aircraft dynamic soarer
 	
 	MODULE
 	{
