--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCabinMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCabinMoroz.cfg
@@ -51,11 +51,12 @@ PART
 	skinMaxTemp = 2000
 
 	vesselType = Ship
-	CrewCapacity = 2	//Astronautix shows 4 passengers. This configuration would have been about as cramped as mercury
+	CrewCapacity = 2	//Astronautix shows 4 passengers. This configuration would have been incredibly cramped.
+	//X-20X was supposed to be bigger than standard X-20?
 	bulkheadProfiles = X20
 	noAutoEVAMulti = True
 
-	tags = X20 Moroz base contain outpost passenger statio (stor tour
+	tags = X20 x-20 dynasoar cabin passenger aircraft dynamic soarer
 	
 	INTERNAL
 	{
