--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCockpitMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCockpitMoroz.cfg
@@ -30,7 +30,7 @@ PART
 	subcategory = 0
 	title = Dynasoar Cockpit
 	manufacturer = Boeing
-	description = Dynasoar cockpit. Holds one pilot, and life support for about 35 hours of operations. Dynasoar (standing for "Dynamic Soarer") was an early USAF spaceplane, intended to function as a station tender, reconnaissance craft, and nuclear bomber. Designed for "Dynamic Soaring", dipping deep into the atmosphere and using aerodynamic manuevers to skip back out, or change it's orbit. This would have allowed it to make passes as low as 50 km for precision reconnaissance or bombing before returning to orbit. Although Dynasoar's hot structure TPS made it relatively durable, the same cannot be said of it's Transtage propulsion, so atmospheric manuevers are to be performed at your own risk.
+	description = Dynasoar cockpit. Dynasoar (short for "Dynamic Soarer") was an early USAF spaceplane, intended to function as a station tender, reconnaissance craft, and nuclear bomber. Designed for "Dynamic Soaring", dipping deep into the atmosphere and using aerodynamic manuevers to skip back out, or change it's orbit. This would have allowed it to make passes as low as 50 km for precision reconnaissance or bombing before returning to orbit. Although Dynasoar's hot structure TPS made it relatively durable, the same cannot be said of it's Transtage propulsion, so atmospheric manuevers are to be performed at your own risk.
 	attachRules = 1,1,1,1,0
 	
 	//Source: https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/19720063137.pdf
@@ -73,17 +73,18 @@ PART
 	skinMaxTemp = 2000
 
 	vesselType = Ship
-	tags = X20 Moroz aero aircraft cmg command control ?eva fly gyro ?iva moment pilot plane react space stab steer torque
-	
-	//INTERNAL
-	//{
-	//	name = mk1CockpitInternal
-	//}
+	tags = X20 x-20 dynasoar cabin cockpit aircraft dynamic soarer
 	
 	INTERNAL
 	{
-		name = DYNA_INTERIOR
+		name = mk1CockpitInternal
+		offset = 0.0, 0.25, 0.0
 	}
+	
+	//INTERNAL
+	//{
+	//	name = DYNA_INTERIOR
+	//}
 
 
 	MODULE
