--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCrewTubeMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCrewTubeMoroz.cfg
@@ -40,7 +40,7 @@ PART
 	emissiveConstant = 0.8
 	fuelCrossFeed = True
 	bulkheadProfiles = mk2
-	tags = X20 Moroz contain convey equipment freight hold hollow payload (stor transport utility
+	tags = X20 x-20 dynasoar crew docking aircraft dynamic soarer
 	
 	MODULE
 	{
