--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaElevonMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaElevonMoroz.cfg
@@ -54,7 +54,7 @@ PART
 	maxTemp = 773	//delicate, lower int temp
 	skinMaxTemp = 2000
 
-	tags = X20 Moroz aero aileron aircraft control (elev plane )rudder
+	tags = X20 x-20 dynasoar control elevator elevon aircraft dynamic soarer
 
 	//MODULE
 	//{
