--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaRudderMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaRudderMoroz.cfg
@@ -54,7 +54,7 @@ PART
 	maxTemp = 773	//delicate, lower int temp
 	skinMaxTemp = 2000
 
-	tags = X20 Moroz aero aircraft canard control (elev fin (fore lift plane rocket )rudder stab swept tail
+	tags = X20 x-20 dynasoar control rudder aircraft dynamic soarer
 
 	//MODULE
 	//{
