--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaShieldMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaShieldMoroz.cfg
@@ -40,7 +40,7 @@ PART
 	skinMaxTemp = 1144
 	explosionPotential = 0.1
 	bulkheadProfiles = srf
-	tags = X20 Moroz aero aircraft canard control (elev fin (fore lift plane rocket )rudder stab swept tail
+	tags = X20 x-20 dynasoar cockpit aircraft dynamic soarer
 
 	MODULE
 	{
