--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaWingMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaWingMoroz.cfg
@@ -57,7 +57,7 @@ PART
 	maxTemp = 1144
 	skinMaxTemp = 2000
 
-	tags = X20 Moroz aero aircraft fligh foil lift plane swept
+	tags = X20 x-20 dynasoar wing aircraft dynamic soarer
 	
 	//MODULE
 	//{
@@ -82,7 +82,7 @@ PART
 
 	EFFECTS
 	{
-		running
+		runningrcs
 		{
 			AUDIO
 			{
