Deprecate uneeded old Dyna Parts

--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAftBay.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAftBay.cfg
@@ -34,7 +34,7 @@ PART
 	cost = 3400
 	category = Propulsion
 	subcategory = 0
-	title = Dynasoar Aft Bay
+	title = Deprecated
 	manufacturer = Boeing
 	description = Contains the Liquid Hydrogen and Liquid Oxygen tanks for the DynaSoar fuel cells, as well as a solid rocket motor for abort or emergency deorbiting.
 
