--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBay.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBay.cfg
@@ -24,7 +24,7 @@ PART
 	cost = 4000
 	category = Payload
 	subcategory = 0
-	title = DynaSoar Cargo Bay
+	title = Deprecated
 	manufacturer = Boeing
 
 	mass = 0.150
