--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBody.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBody.cfg
@@ -30,7 +30,7 @@ PART
 	cost = 5000
 	category = Pods
 	subcategory = 0
-	title = DynaSoar Body
+	title = Deprecated
 	manufacturer = Boeing
 	description = DynaSoar fuselage and cockpit. Features RCS (Limit RCS to Pitch,Yaw,Ventral and Dorsal via the RCS Actuation toggles). It is fitted with a kos computer if you have the mod installed. 
 
