--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaDragChute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaDragChute.cfg
@@ -25,7 +25,7 @@ PART
 	category = Utility
 	subcategory = 0
 	manufacturer = Boeing
-	title = DynaSoar Drag Chute
+	title = Deprecated
 	description = Dynasoar drag chute to use while landing. Place it on the back of the DynaSoar body. Compatible with RealChute.
 
 	attachRules = 1,0,1,0,0
