--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaElevonL.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaElevonL.cfg
@@ -19,7 +19,7 @@ PART
 	cost = 400
 	category = Aero
 	subcategory = 0
-	title = Dynasoar Elevon Left
+	title = Deprecated
 	manufacturer = Boeing
 	description = Control surface for the DynaSoar left wing. Limit its functionality to Roll/Pitch only.
 	attachRules = 1,0,1,1,1
