--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaFuelTank.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaFuelTank.cfg
@@ -18,7 +18,7 @@ PART
 	cost = 4000
 	category = Propulsion
 	subcategory = 0
-	title = DynaSoar Fuel Tank
+	title = Deprecated
 	manufacturer = Boeing
 	attachRules = 1,0,1,1,0
 	mass = 0.150
