--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaWingRight.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaWingRight.cfg
@@ -28,7 +28,7 @@ PART
 	cost = 1000
 	category = Aero
 	subcategory = 0
-	title = DynaSoar Wing Right
+	title = Deprecated
 	manufacturer = Boeing
 	description = Right wing and rudder of the DynaSoar. Limit its aero functionality only to Yaw. Also limit its RCS functionality to Roll only via the actuation toggles. Rudder fins can be used as an airbrake. Add them to the Brakes action group.
 
