--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaCabin.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaCabin.cfg
@@ -19,7 +19,7 @@ PART
 	cost = 4000
 	category = Utility
 	subcategory = 0
-	title = DynaSoar Passenger Cabin
+	title = Deprecated
 	manufacturer = Boeing
 	attachRules = 1,0,1,1,0
 	mass = 0.800
