Add missing `ignoreForIsp` for helium

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
@@ -194,6 +194,7 @@ PART
 		{
 			name = Helium
 			ratio = 10.0
+			ignoreForIsp = true
 		}
 		atmosphereCurve
 		{
@@ -233,7 +234,7 @@ PART
 			maxAmount = 1010
 		}
 	}
-	
+
 	MODULE
 	{
 		name = ModuleAblator
@@ -244,7 +245,7 @@ PART
 		pyrolysisLossFactor = 6000
 		reentryConductivity = 0.01
 		ablationTempThresh = 500
-		
+
 		// Use the char though!
 		useChar = True
 		charModuleName = shieldChar
