--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2RCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2RCS.cfg
@@ -84,6 +84,7 @@ PART
 		{
 			name = Helium
 			ratio = 10.0
+			ignoreForIsp = true
 		}
 		atmosphereCurve
 		{
@@ -124,6 +125,6 @@ PART
 				speed = 1.0 1.0
 				localRotation = -90, 0, 0
 			}
-		}		
+		}
 	}
 }
