--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiEquipmentSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiEquipmentSection.cfg
@@ -18,7 +18,7 @@ PART
 	node_stack_bottom = 0.0, -0.22401, 0.0, 0.0, -1.0, 0.0, 1
 	node_stack_recessed = 0.0, 0.15732, 0.0, 0.0, -1.0, 0.0, 1
 	node_stack_top = 0.0, 0.68709, 0.0, 0.0, 1.0, 0.0, 1
-	
+
 	NODE
 	{
 		transform = node1
@@ -26,7 +26,7 @@ PART
 		size = 0
 		method = FIXED_JOINT
 	}
-	
+
 	NODE
 	{
 		transform = node2
@@ -34,7 +34,7 @@ PART
 		size = 0
 		method = FIXED_JOINT
 	}
-	
+
 	NODE
 	{
 		transform = node3
@@ -42,7 +42,7 @@ PART
 		size = 0
 		method = FIXED_JOINT
 	}
-	
+
 	NODE
 	{
 		transform = node4
@@ -50,10 +50,10 @@ PART
 		size = 0
 		method = FIXED_JOINT
 	}
-	
+
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
-	
+
 	attachRules = 1,0,1,1,0
 	TechRequired = flightControl
 	entryCost = 0
@@ -121,7 +121,7 @@ PART
 		stagingEnabled = False
 		menuName = Jettison
 	}
-	
+
 	MODULE
 	{
 		name = ModuleRCSFX
@@ -151,6 +151,7 @@ PART
 		{
 			name = Helium
 			ratio = 10.0
+			ignoreForIsp = true
 		}
 		atmosphereCurve
 		{
@@ -287,7 +288,7 @@ PART
 			name = Two
 			title = 2 Nodes
 			descriptionSummary = Two OAMS thruster attach points at the bottom of the module.
-			descriptionDetail = 
+			descriptionDetail =
 			defaultSubtypePriority = 1
 			node = OAMS_node1
 			node = OAMS_node2
@@ -298,7 +299,7 @@ PART
 			name = Four
 			title = 4 Nodes
 			descriptionSummary = Four OAMS thruster attach points at the bottom of the module.
-			descriptionDetail = 
+			descriptionDetail =
 			node = OAMS_node1
 			node = OAMS_node2
 			node = OAMS_node3
@@ -331,7 +332,7 @@ PART
 		{
 			%ResourceName = LqdOxygen
 			%Ratio = 0.000210317
-		}		
+		}
 		OUTPUT_RESOURCE
 		{
 			%ResourceName = WasteWater
