--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiOAMS.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiOAMS.cfg
@@ -109,6 +109,7 @@ PART
 		{
 			name = Helium
 			ratio = 10.0
+			ignoreForIsp = true
 		}
 		atmosphereCurve
 		{
@@ -236,6 +237,7 @@ PART
 			{
 				name = Helium
 				ratio = 10.0
+				ignoreForIsp = true
 			}
 
 			atmosphereCurve
