--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiReentryControlSystem.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiReentryControlSystem.cfg
@@ -102,6 +102,7 @@ PART
 		{
 			name = Helium
 			ratio = 10.0
+			ignoreForIsp = true
 		}
 		atmosphereCurve
 		{
@@ -135,7 +136,7 @@ PART
 			maxAmount = 330
 		}
 	}
-	
+
 	MODULE
 	{
 		name = ModuleB9PartSwitch
