--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetrogradeSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetrogradeSection.cfg
@@ -23,7 +23,7 @@ PART
 		size = 0
 		method = FIXED_JOINT
 	}
-	
+
 	NODE
 	{
 		transform = retroNode2
@@ -31,7 +31,7 @@ PART
 		size = 0
 		method = FIXED_JOINT
 	}
-	
+
 	NODE
 	{
 		transform = retroNode3
@@ -39,7 +39,7 @@ PART
 		size = 0
 		method = FIXED_JOINT
 	}
-	
+
 	NODE
 	{
 		transform = retroNode4
@@ -67,7 +67,7 @@ PART
 	breakingTorque = 72
 	maxTemp = 2000 // = 2900
 	bulkheadProfiles = size0p5, size1
-	
+
 	stackSymmetry = 3
 
 	tags = gemini retrograde adapter rcs control
@@ -159,6 +159,7 @@ PART
 		{
 			name = Helium
 			ratio = 10.0
+			ignoreForIsp = true
 		}
 		atmosphereCurve
 		{
@@ -196,6 +197,7 @@ PART
 		{
 			name = Helium
 			ratio = 10.0
+			ignoreForIsp = true
 		}
 		atmosphereCurve
 		{
