--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetro.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetro.cfg
@@ -34,7 +34,7 @@ PART
 	subcategory = 0
 	title = Star-13E Gemini Retro Rocket
 	manufacturer = Thiokol
-	description = emini retro solid derived from the Star 13 orbit insertion motor. Place in 4x symmetry in the gaps of the retro module cruciform.
+	description = Gemini retro solid derived from the Star 13 orbit insertion motor. Place in 4x symmetry in the gaps of the retro module cruciform.
 
 	attachRules = 1,1,1,1,0
 	mass = 0.0043
