WF for new Dynasoar

--- a/GameData/ROCapsules/PartConfigs/Dynasoar/Waterfall_Support_Dynasoar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/Waterfall_Support_Dynasoar.cfg
@@ -1,4 +1,4 @@
-@PART[ROC-DynaBody|ROC-DynaAftBay|ROC-DynaWing*]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
+@PART[ROC-DynaBody|ROC-DynaAftBay|ROC-DynaWingLeft|ROC-DynaWingRight]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
 {
     ROWaterfall
     {
@@ -11,7 +11,7 @@
     }
 }
 
-@PART[ROC-DynaBody|ROC-DynaAftBay|ROC-DynaWing*]:AFTER[zROWaterfall_99_Finalize]:NEEDS[Waterfall]
+@PART[ROC-DynaBody|ROC-DynaAftBay|ROC-DynaWingLeft|ROC-DynaWingRight]:AFTER[zROWaterfall_99_Finalize]:NEEDS[Waterfall]
 {
     @EFFECTS
     {
