Fix transparent hole on Gemini OAMS thrusters Now that DepthMask is on CKAN, we can depend it.

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiOAMS.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiOAMS.cfg
@@ -117,6 +117,12 @@ PART
 			key = 1 100
 		}
 	}
+
+	MODULE
+	{
+		name = ModuleDepthMask
+		maskTransform = Thruster_DepthMask
+	}
 }
 
 PART
@@ -246,5 +252,11 @@ PART
 				key = 1 100
 			}
 		}
+	}
+
+	MODULE
+	{
+		name = ModuleDepthMask
+		maskTransform = Thruster_DepthMask
 	}
 }
