--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2AJ10-133.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2AJ10-133.cfg
@@ -59,7 +59,7 @@ PART
 	thermalMassModifier = 1.0
 	skinMassPerArea = 2.0
 	stagingIcon = LIQUID_ENGINE
-	fuelCrossfeed = True
+	fuelCrossFeed = True
 	stageOffset = 1
 	childStageOffset = 1
 
