--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
@@ -81,7 +81,7 @@ PART
 	breakingForce = 250
 	breakingTorque = 250
 	
-	fuelCrossfeed = true
+	fuelCrossFeed = true
 	
 	//	============================================================================
 	//	Modules and Resources
