--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloLES.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloLES.cfg
@@ -63,7 +63,7 @@ PART
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
 	
-	fuelCrossfeed = false
+	fuelCrossFeed = false
 	
 	//	============================================================================
 	//	Modules and Resources
