--- a/GameData/ROCapsules/PartConfigs/CST/CSTNoseCone.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTNoseCone.cfg
@@ -63,7 +63,7 @@ PART
 	fuelCrossFeed = False
 	PhysicsSignificance = 0
 	stageOffset = 1
-	chilStageOffset = 1
+	childStageOffset = 1
 
 	//	============================================================================
 	//	Modules and Resources
