--- a/GameData/ROCapsules/PartConfigs/LEM/LEM-LMDE.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEM-LMDE.cfg
@@ -56,7 +56,7 @@ PART
 	skinMassPerArea = 2.0
 	breakingForce = 250
 	breakingTorque = 250
-	fuelCrossfeed = True
+	fuelCrossFeed = True
 	stageOffset = 1
 	childStageOffset = 1
 
