--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -71,7 +71,7 @@ PART
 	skinMassPerArea = 2.0
 	breakingForce = 250
 	breakingTorque = 250
-	fuelCrossfeed = True
+	fuelCrossFeed = True
 	NoCrossFeedNodeKey = bottom
 	leaveCategory = True
 	stageOffset = 1
