--- a/GameData/ROCapsules/PartConfigs/LEM/LEMDescent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMDescent.cfg
@@ -56,7 +56,7 @@ PART
 	buoyancy = 1.1
 	breakingForce = 250
 	breakingTorque = 250
-	fuelCrossfeed = True
+	fuelCrossFeed = True
 
 	//	============================================================================
 	//	Modules and Resources
