--- a/GameData/ROCapsules/PartConfigs/LEM/LEMRover.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMRover.cfg
@@ -54,7 +54,7 @@ PART
 	skinMassPerArea = 2.0
 	breakingForce = 250
 	breakingTorque = 250
-	fuelCrossfeed = False
+	fuelCrossFeed = False
 
 	//	============================================================================
 	//	Modules and Resources
