--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block1LES.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block1LES.cfg
@@ -52,7 +52,7 @@ PART
 	breakingForce = 250
 	breakingTorque = 250
 	maxTemp = 1973.15
-	fuelCrossfeed = false
+	fuelCrossFeed = false
 	stageOffset = 1
 	childStageOffset = 1
 	stagingIcon = SOLID_BOOSTER
