--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
@@ -77,7 +77,7 @@ PART
 	buoyancy = 1.1
 	breakingForce = 250
 	breakingTorque = 250
-	fuelCrossfeed = true
+	fuelCrossFeed = true
 
 	//	============================================================================
 	//	Animations and Textures
