--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockV.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockV.cfg
@@ -10,8 +10,8 @@ PART
 
 	crashTolerance = 10
 	maxTemp = 673.15
-	skinTemp = 773.15
-	fuelCrossfeed = true
+	skinMaxTemp = 773.15
+	fuelCrossFeed = true
 	breakingForce = 10000
 	breakingTorque = 10000
 
