--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloDrogueParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloDrogueParachute.cfg
@@ -64,7 +64,7 @@ PART
 	breakingTorque = 250
 	bodyLiftMultiplier = 0
 	
-	fuelCrossfeed = true
+	fuelCrossFeed = true
 	
 	//	============================================================================
 	//	Modules and Resources
