--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloForwardHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloForwardHS.cfg
@@ -62,7 +62,7 @@ PART
 	breakingTorque = 250
 	bodyLiftMultiplier = 0
 	
-	fuelCrossfeed = false
+	fuelCrossFeed = false
 	
 	//	============================================================================
 	//	Modules and Resources
