--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloParachute.cfg
@@ -63,7 +63,7 @@ PART
 	breakingTorque = 250
 	bodyLiftMultiplier = 0
 	
-	fuelCrossfeed = true
+	fuelCrossFeed = true
 	
 	//	============================================================================
 	//	Modules and Resources
