--- a/GameData/ROCapsules/PartConfigs/CST/CSTRS88.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTRS88.cfg
@@ -10,8 +10,8 @@ PART
 
 	crashTolerance = 10
 	maxTemp = 673.15
-	skinTemp = 773.15
-	fuelCrossfeed = true
+	skinMaxTemp = 773.15
+	fuelCrossFeed = true
 	breakingForce = 10000
 	breakingTorque = 10000
 
@@ -64,7 +64,7 @@ PART
 	angularDrag = 2
 	stagingIcon = LIQUID_ENGINE
 	stageOffset = 1
-	chileStageOffset = 1
+	childStageOffset = 1
 
 	//	============================================================================
 	//	Modules and Resources
