Fix Missing DRE Needs

--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiRetrogradeSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiRetrogradeSection.cfg
@@ -223,7 +223,7 @@ PART
 		toggleEditor = True
 		toggleFlight = True
 	}
-	MODULE
+	MODULE:NEEDS[DeadlyReentry]
 	{
 		name = ModuleAeroReentry
 		skinHeatConductivity = 0.001
