--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodRetroBooster.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodRetroBooster.cfg
@@ -47,7 +47,7 @@ PART
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-	crashToerance = 5
+	crashTolerance = 5
 	breakingForce = 250
 	breakingTorque = 250
 	maxTemp = 673.15
