Add 4kL fuel tank to D-2 1-engine Skirt Section

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Skirt2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Skirt2.cfg
@@ -138,4 +138,12 @@ PART
 			key = 1 100
 		}
 	}
+
+	MODULE
+	{
+		name = ModuleFuelTanks
+		type = ServiceModule
+		volume = 4000.0
+		basemass = -1
+	}
 }
