Fix cfg syntax errors

--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -707,7 +707,7 @@ PART
 
 	!MODULE[ModuleDataTransmitter],*{}
 
-	!MODULE[ModuleRTAntenna*],{}
+	!MODULE[ModuleRTAntenna*],*{}
 
 	!MODULE[ModuleSPU*],*{}
 
