--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -794,7 +794,7 @@ PART
 //	And also override the mass set by RO engine configs
 //	================================================================================
 
-@PART[ROC-LEMAscent]:FOR[zzzRealismOverhaul]
+@PART[ROC-LEMAscent]:BEFORE[zzzRealismOverhaul]
 {
 	!RESOURCE,*{}
 	@mass = 2.2
