--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -527,7 +527,7 @@ PART
 //	Final Pass to Make Sure TAC does not add extra resources
 //	================================================================================
 
-@PART[ROC-MercuryCM]:FOR[zzzRealismOverhaul]
+@PART[ROC-MercuryCM]:BEFORE[zzzRealismOverhaul]
 {
 	!RESOURCE:HAS[~name[Ablator],~name[CharredAblator]],*{}
 }
