--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
@@ -191,7 +191,7 @@ PART
 //	TAC Life Support compatibility.
 //	==================================================
 
-@PART[ROC-VoskhodCapsule]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
+@PART[ROC-VoskhodCapsule]:BEFORE[RealismOverhaul]:NEEDS[TacLifeSupport]
 {
 	@MODULE[ModuleFuelTanks]
 	{
