--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
@@ -189,7 +189,7 @@ PART
 //	TAC Life Support compatibility.
 //	==================================================
 
-@PART[ROC-VostokCapsule]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
+@PART[ROC-VostokCapsule]:BEFORE[RealismOverhaul]:NEEDS[TacLifeSupport]
 {
 	@MODULE[ModuleFuelTanks]
 	{
