--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiEquipmentSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiEquipmentSection.cfg
@@ -378,7 +378,7 @@ PART
 //	Final Pass to Make Sure TAC does not add extra resources
 //	================================================================================
 
-@PART[ROC-GeminiEquipmentSectionBDB]:FOR[zzzRealismOverhaul]
+@PART[ROC-GeminiEquipmentSectionBDB]:BEFORE[zzzRealismOverhaul]
 {
 	!RESOURCE:HAS[~name[Ablator],~name[CharredAblator]],*{}
 }
