Update capsule thermals
Update capsule thermal properties, and patch maxtemps after RO global patches run. Everything now works mostly correctly, except for:
Gemini needs inflated skinMaxTemp due to receiving excessive convective flux. Drag cube issue?

Orion HS does not occlude Orion CM, which consequently cannot properly survive reentry. Drag cube issue.

--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCabinMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCabinMoroz.cfg
@@ -158,7 +158,7 @@ PART
 //	================================================================================
 //	TAC Life Support Compatibility
 //	================================================================================
-@PART[ROC-DynaCockpitMoroz]:FOR[ROCapsules]:NEEDS[TacLifeSupport]
+@PART[ROC-DynaCabinMoroz]:FOR[ROCapsules]:NEEDS[TacLifeSupport]
 {
 
 	//Scrubber
@@ -234,4 +234,12 @@ PART
 			maxAmount = 81.31
 		}
 	}
+}
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-DynaCabinMoroz]:FOR[RealismOverhaul]
+{
+	@skinMaxTemp = 2000
 }
