--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaElevonMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaElevonMoroz.cfg
@@ -103,6 +103,14 @@ PART
 			{
 				mainTextureURL = ROCapsules/Assets/IronCretin/X20_wing_white
 			}
-		}	
-	}	
+		}
+	}
+}
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-DynaElevonMoroz]:FOR[RealismOverhaul]
+{
+	@skinMaxTemp = 2000
 }
