--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/Waterfall_Support_Dynasoar_Moroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/Waterfall_Support_Dynasoar_Moroz.cfg
@@ -1,4 +1,4 @@
-@PART[ROC-DynaCockpitMoroz|ROC-DynaWingMoroz|ROC-DynaButtMoroz]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
+@PART[ROC-DynaCockpitMoroz|ROC-DynaCockpitAltMoroz|ROC-DynaWingMoroz|ROC-DynaButtMoroz]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
 {
     ROWaterfall
     {
