--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiFlightPack.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiFlightPack.cfg
@@ -48,10 +48,24 @@ PART
 	crashTolerance = 15
 	breakingForce = 25
 	breakingTorque = 25
-	maxTemp = 3200
 
 	CoMOffset = 0.0, -0.35, 0.0
 
+	
+	//Thermal Stuff
+	//Assuming same as Dynasoar
+	//Structure and skin made of Rene 41 (max temp 1144)
+	//Belly coated with Molybdenum (max temp ~2000)
+	//Nose made of graphite
+	//Very high emissivity paint applied to maximize radiation
+	heatConductivity = 0.25		//all conductivity
+	skinInternalConductionMult = 0.005	//skin-to-int conductivity
+	skinMassPerArea = 8.25 //1 mm Rene 41
+	thermalMassModifier = 2.0
+	emissiveConstant = 0.95		//matte black
+
+	maxTemp = 773	//delicate, lower int temp
+	skinMaxTemp = 2000
 
 	stageOffset = 1
 	childStageOffset = 1
@@ -125,4 +139,12 @@ PART
 		rimColor = 0.6242, 0.6445, 0.6914, 1.0
 		ReflectionColor = 0.6442, 0.6445, 0.64, 1.0
 	}
+}
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-GeminiFlightPack]:FOR[RealismOverhaul]
+{
+	@skinMaxTemp = 2000
 }
