--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHSLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHSLunar.cfg
@@ -24,7 +24,7 @@ PART
 	subcategory = 0
 	title = Big Gemini Lunar Heat Shield
 	manufacturer = McDonnell Aircraft
-	description  = Heatshield for the Big Gemini capsule
+	description  = Lunar heatshield for the Big Gemini capsule.  <b><color=red>Gemini lacks the radiative heat protection of more advanced capsules. Extremely gentle Lunar reentries only.</color></b>
 	attachRules = 1,0,1,0,0
 	mass = 0.144
 	dragModelType = default
