--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiParachuteDrogue.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiParachuteDrogue.cfg
@@ -41,7 +41,7 @@
 	angularDrag = 3
 	crashTolerance = 12
 	maxTemp = 900
-	skinMaxTemp = 2000
+	skinMaxTemp = 1073		//Shouldn't get exposed to airflow, leave alone
 	emissiveConstant = 0.7
 	stageOffset = -1
 	bulkheadProfiles = size0, srf
