--- a/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
@@ -71,12 +71,21 @@ PART
 	breakingTorque = 500000
 	linearStrength = 9300000
 	angularStrength = 9300000
-	maxTemp = 800
-	skinMaxTemp = 3600
-	thermalMassModifier = 3.0
-	heatConductivity = 0.32
 	fuelCrossFeed = False
 	stagingIcon = COMMAND_POD
+	
+	//Thermal Stuff
+	//Skin made of Titanium, coated with TUFI and AETB-8 tiles, and AFRSI blankets
+	maxTemp = 773
+	skinMaxTemp = 1533					//Approximate maximum temp of shuttle HSRI tiles
+	emissiveConstant = 0.4				//Metallicized Klapton coating?
+	heatConductivity = 1.0				//All conductivity. Leave this alone for now
+	thermalMassModifier = 1.0			//Thermal mass. Leave this alone for now
+	skinInternalConductionMult = 0.005	//Skin-to-int conductivity. Skin coated in shuttle-grade tiles and blankets, very well insulated
+	skinMassPerArea = 19.2				//25 mm TUFI tiles? Assuming at shuttle density of 12 lbs/ft^3, 19.2 kg/m^2
+	skinThermalMassModifier = 1.0		//Skin thermal mass. Leave this alone for now
+	skinSkinConductionMult = 0.005		//Skin extremely well insulated and isolated. Probably not much conduction.
+	//Unfortunately, the drag cubes are broken and the CM takes full heating from reentry.
 
 	CrewCapacity = 6
 
@@ -336,4 +345,12 @@ PART
 			Ratio = 0.1
 		}
 	}
+}
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-OrionCM]:FOR[RealismOverhaul]
+{
+	@skinMaxTemp = 3600		//Drag cubes are incorrect, and CM takes full heating. Unable to refine further at the moment
 }
