--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaBayMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaBayMoroz.cfg
@@ -106,3 +106,11 @@ PART
 		}
 	}
 }
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-DynaBayMoroz]:FOR[RealismOverhaul]
+{
+	@skinMaxTemp = 2000
+}
