--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaButtMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaButtMoroz.cfg
@@ -261,3 +261,11 @@ PART
 		}
 	}
 }
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-DynaButtMoroz]:FOR[RealismOverhaul]
+{
+	@skinMaxTemp = 2000
+}
