--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCockpitMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCockpitMoroz.cfg
@@ -371,3 +371,11 @@ PART
 		}
 	}
 }
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-DynaCockpitMoroz]:FOR[RealismOverhaul]
+{
+	@skinMaxTemp = 2000
+}
