--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaRudderMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaRudderMoroz.cfg
@@ -99,6 +99,14 @@ PART
 			{
 				mainTextureURL = ROCapsules/Assets/IronCretin/X20_wing_white
 			}
-		}	
-	}	
+		}
+	}
+}
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-DynaRudderMoroz]:FOR[RealismOverhaul]
+{
+	@skinMaxTemp = 2000
 }
