--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaWingMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaWingMoroz.cfg
@@ -167,3 +167,12 @@ PART
 		}
 	}
 }
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-DynaWingMoroz]:FOR[RealismOverhaul]
+{
+	@maxTemp = 1144
+	@skinMaxTemp = 2000
+}
