--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiFlightPackContSurf.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiFlightPackContSurf.cfg
@@ -38,15 +38,27 @@ PART
 	// --- standard part parameters ---
 	mass = 0.02
 	thermalMassModifier = 4.0 // the dang things are light, so 3200 kJ/tonne-K
-	heatConductivity = 0.06 // half default
-	emissiveConstant = 0.95
 	dragModelType = none
 	maximum_drag = 0.02
 	minimum_drag = 0.02
 	angularDrag = 0.75
 	crashTolerance = 10
-	maxTemp = 2600
 	explosionPotential = 0.1
+
+	//Thermal Stuff
+	//Assuming same as Dynasoar
+	//Structure and skin made of Rene 41 (max temp 1144)
+	//Belly coated with Molybdenum (max temp ~2000)
+	//Nose made of graphite
+	//Very high emissivity paint applied to maximize radiation
+	heatConductivity = 0.25		//all conductivity
+	skinInternalConductionMult = 0.005	//skin-to-int conductivity
+	skinMassPerArea = 8.25 //1 mm Rene 41
+	thermalMassModifier = 2.0
+	emissiveConstant = 0.95		//matte black
+
+	maxTemp = 773	//delicate, lower int temp
+	skinMaxTemp = 2000
 
 	// --- winglet parameters ---
 
@@ -112,5 +124,12 @@ PART
 		rimColor = 0.6242, 0.6445, 0.6914, 1.0
 		ReflectionColor = 0.6442, 0.6445, 0.64, 1.0
 	}
+}
 
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-GeminiFlightPackContSurf]:FOR[RealismOverhaul]
+{
+	@skinMaxTemp = 2000
 }
