--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
@@ -37,13 +37,21 @@ PART
 	minimum_drag = 0.15
 	angularDrag = 2
 	crashTolerance = 20
-	maxTemp = 900
-	skinMaxTemp = 3350
-	heatConductivity = 0.1
-	thermalMassModifier = 1.0
 	vesselType = Ship
 	CrewCapacity = 7
 	bulkheadProfiles = size1p2, size2
+
+	//Thermal Stuff
+	//Skin made of Rene 41 shingles (max temp 1144), with beryllium shingles over hotspots (max temp 1273)
+	maxTemp = 773.15
+	skinMaxTemp = 2000					//Beryllium shingles (max temp 1273). Capsule takes a ton of flux. Tweak drag cubes? Raise this until then
+	emissiveConstant = 0.95				//Shingles coated in high emissivity ceramic paint
+	heatConductivity = 1.0				//All conductivity. Leave this alone for now
+	thermalMassModifier = 1.0			//Thermal mass. Leave this alone for now
+	skinInternalConductionMult = 0.005	//Skin-to-int conductivity. Tiles isloated from structure with spacers, and had gold coating on inside to minimize radiation.
+	skinMassPerArea = 13.15				//Beryllium 1.85 ton/m^3. 7.11 mm Beryllium, 13.15 kg/m^2?
+	skinThermalMassModifier = 1.0		//Skin thermal mass. Leave this alone for now
+	skinSkinConductionMult = 0.1		//Beryllium and Rene 41 are pretty conductive. Individual panels well isolated though.
 
 	tags = ?gemina 2.5 1.5 Gemini leo beale loaf bread
 
@@ -168,4 +176,12 @@ PART
 			}
 		}
 	}
+}
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-BigGeminiCabinBDB]:FOR[RealismOverhaul]
+{
+	@skinMaxTemp = 2000		//Raising this until we can find a better way to deal with excess heat flux
 }
