--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiNoseconeAero.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiNoseconeAero.cfg
@@ -43,14 +43,23 @@ PART
 	crashTolerance = 10
 	breakingForce = 50
 	breakingTorque = 50
-	maxTemp = 900
-	skinMaxTemp = 2000
-	emissiveConstant = 0.6 // shingles
 	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
 	stagingIcon = DECOUPLER_VERT
 	bulkheadProfiles = size00, size0
+
+	//Thermal Stuff
+	//Skin made of Rene 41 shingles (max temp 1144), with beryllium shingles over hotspots (max temp 1273)
+	maxTemp = 773.15
+	skinMaxTemp = 1273					//Beryllium shingles (max temp 1273)
+	emissiveConstant = 0.95				//Shingles coated in high emissivity ceramic paint
+	heatConductivity = 1.0				//All conductivity. Leave this alone for now
+	thermalMassModifier = 1.0			//Thermal mass. Leave this alone for now
+	skinInternalConductionMult = 0.005	//Skin-to-int conductivity. Tiles isloated from structure with spacers, and had gold coating on inside to minimize radiation.
+	skinMassPerArea = 13.15				//Beryllium 1.85 ton/m^3. 7.11 mm Beryllium, 13.15 kg/m^2?
+	skinThermalMassModifier = 1.0		//Skin thermal mass. Leave this alone for now
+	skinSkinConductionMult = 0.1		//Beryllium and Rene 41 are pretty conductive. Individual panels well isolated though.
 
 	tags = gemini dock docking port gatv agena target
 
@@ -76,4 +85,12 @@ PART
 			}
 		}
 	}
+}
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-GeminiNoseconeAeroBDB]:FOR[RealismOverhaul]
+{
+	@skinMaxTemp = 1273
 }
