--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
@@ -49,13 +49,25 @@ PART
 	crashTolerance = 12
 	breakingForce = 50
 	breakingTorque = 50
-	maxTemp = 773.15
-	skinMaxTemp = 2573.15
 	fuelCrossFeed = True
 	bodyLiftMultiplier = 0
 	bulkheadProfiles = size0
 
-	fuelCrossFeed = true
+	//Thermal Stuff
+	//Skin made of Rene 41 shingles (max temp 1144)
+	//Peak temp on HS: ~2000 K
+	//Peak temp on Walls: ~977 K
+	//Peak temp on forward surfaces: ~600 K
+	//Peak interior temp: ~315 K
+	maxTemp = 773.15
+	skinMaxTemp = 1144					//Rene 41 shingles (max temp 1144)
+	emissiveConstant = 0.95				//Shingles coated in high emissivity ceramic paint
+	heatConductivity = 1.0				//All conductivity. Leave this alone for now
+	thermalMassModifier = 1.0			//Thermal mass. Leave this alone for now
+	skinInternalConductionMult = 0.005	//Skin-to-int conductivity. Tiles isloated from structure with spacers, and had gold coating on inside to minimize radiation.
+	skinMassPerArea = 3.38				//Rene 41 8.24 ton/m^3. 0.41 mm Rene 41, 3.38 kg/m^2?
+	skinThermalMassModifier = 1.0		//Skin thermal mass. Leave this alone for now
+	skinSkinConductionMult = 0.1		//Rene 41 is pretty conductive, and heat sink needed to spread heat. Individual panels well isolated though.
 
 	tags = mercury rcs parachute control
 
@@ -306,4 +318,12 @@ PART
 	{
 		%crossfeedStatus = true
 	}
+}
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-MercuryRCSBDB]:FOR[RealismOverhaul]
+{
+	@skinMaxTemp = 1144
 }
