--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaBayMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaBayMoroz.cfg
@@ -110,7 +110,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-DynaBayMoroz]:FOR[RealismOverhaul]
+@PART[ROC-DynaBayMoroz]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 2000
 }
