Remove DRE patches
Remove fancy DRE patches, they apparently get clobbered by a later RO pass anyway.

--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
@@ -101,8 +101,7 @@ PART
 	//This actually survives LEO reentry on it's own. Probably not ideal
 	MODULE
 	{
-		name:NEEDS[!DeadlyReentry] = ModuleAblator
-		name:NEEDS[DeadlyReentry] = ModuleHeatShield
+		name = ModuleAblator
 		ablativeResource = Ablator
 		outputResource = CharredAblator
 		outputMult = 0.8
@@ -111,7 +110,6 @@ PART
 		pyrolysisLossFactor = 145833
 		ablationTempThresh = 1250
 		reentryConductivity = 0.0025
-		depletedMaxTemp:NEEDS[DeadlyReentry] = 1200
 		infoTemp = 3000
 	}
 	RESOURCE
