Update capsule thermals (#122)
* Update capsule thermals

Update capsule thermal properties, and patch maxtemps after RO global patches run. Everything now works mostly correctly, except for:
Gemini needs inflated skinMaxTemp due to receiving excessive convective flux. Drag cube issue?

Orion HS does not occlude Orion CM, which consequently cannot properly survive reentry. Drag cube issue.

* Correct MM patching order, missing newlines

* Missed one

* Remove DRE patches

Remove fancy DRE patches, they apparently get clobbered by a later RO pass anyway.

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
@@ -67,13 +67,23 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
+	//Thermal Stuff
+	//Skin made of Stainless steel, coated with ablative layer of varying thickness, and Klapton insulation
+	//Peak temp on HS: ~3000 K
+	//Peak temp on Walls: ~2000 K
+	//Peak temp on forward surfaces: ~1100 K
+	maxTemp = 973.15
+	skinMaxTemp = 3000					//Ablative coating wrapped around sides of Apollo to account for extreme flux.
+	emissiveConstant = 0.4				//Metallicized Klapton coating.
+	heatConductivity = 1.0				//All conductivity. Leave this alone for now
+	thermalMassModifier = 1.0			//Thermal mass. Leave this alone for now
+	skinInternalConductionMult = 0.005	//Skin-to-int conductivity. Skin coated in ablator, and isolated from Aluminum hull with very thick insulation layer.
+	skinMassPerArea = 7.9				//1 mm thick stainless, 7.9 kg/m^2?
+	skinThermalMassModifier = 1.0		//Skin thermal mass. Leave this alone for now
+	skinSkinConductionMult = 0.05		//Skin well insulated and connected with slip-joints. Probably not much conduction.
+	
 	mass = 3.234
 	crashTolerance = 8
-	maxTemp = 973.15
-	skinMaxTemp = 3600
-	emissiveConstant = 0.54 // stainless steel
-	thermalMassModifier = 1.0
-	skinMassPerArea = 7.9 //1 mm thick stainless
 	buoyancy = 1.1
 	breakingForce = 250
 	breakingTorque = 250
@@ -117,19 +127,21 @@ PART
 	//	============================================================================
 	//	Modules and Resources
 	//	============================================================================
-
+	
+	//Same structure as main HS, use lunar HS settings
+	//This actually survives LEO reentry on it's own. Probably not ideal
 	MODULE
 	{
 		name:NEEDS[!DeadlyReentry] = ModuleAblator
 		name:NEEDS[DeadlyReentry] = ModuleHeatShield
 		ablativeResource = Ablator
 		outputResource = CharredAblator
-		outputMult = 0.75
+		outputMult = 0.8
 		lossExp = -25000
-		lossConst = 15
-		pyrolysisLossFactor = 1458330
+		lossConst = 150
+		pyrolysisLossFactor = 145833
 		ablationTempThresh = 1250
-		reentryConductivity = 0.001
+		reentryConductivity = 0.0025
 		depletedMaxTemp:NEEDS[DeadlyReentry] = 1200
 		infoTemp = 3000
 	}
@@ -142,10 +154,10 @@ PART
 	RESOURCE
 	{
 		name = CharredAblator
-		maxAmount = 7.5
+		maxAmount = 8
 		amount = 0
 	}
-  
+
 	MODULE
 	{
 		name = ModuleCommand
@@ -166,7 +178,7 @@ PART
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0, 0, -0.17
+		DescentModeCoM = 0, 0, 0.17	//Apollo should reenter "upside-down" to protect crew hatch
 	}
 
 	MODULE
@@ -619,4 +631,12 @@ PART
 		referenceGain = 3.0		//Guess based on Block II
 		RFBand = S		//Default to S-band
 	}
+}
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-ApolloCMBlockIII]:AFTER[RealismOverhaul]
+{
+	@skinMaxTemp = 3000		//Keep this lower to "discourage" attempting reentry without HS
 }
