--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloForwardHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloForwardHS.cfg
@@ -54,10 +54,23 @@ PART
 	//	============================================================================
 	//	Thermo, Durability
 	//	============================================================================
-		
-	crashTolerance = 10
+	
+	//Thermal Stuff
+	//Skin made of Stainless steel, coated with ablative layer of varying thickness, and Klapton insulation
+	//Peak temp on HS: ~3000 K
+	//Peak temp on Walls: ~2000 K
+	//Peak temp on forward surfaces: ~1100 K
 	maxTemp = 973.15
-	skinMaxTemp = 1073.15
+	skinMaxTemp = 3000					//Ablative coating wrapped around sides of Apollo to account for extreme flux.
+	emissiveConstant = 0.4				//Metallicized Klapton coating.
+	heatConductivity = 1.0				//All conductivity. Leave this alone for now
+	thermalMassModifier = 1.0			//Thermal mass. Leave this alone for now
+	skinInternalConductionMult = 0.005	//Skin-to-int conductivity. Skin coated in ablator, and isolated from Aluminum hull with very thick insulation layer.
+	skinMassPerArea = 7.9				//1 mm thick stainless, 7.9 kg/m^2?
+	skinThermalMassModifier = 1.0		//Skin thermal mass. Leave this alone for now
+	skinSkinConductionMult = 0.05		//Skin well insulated and connected with slip-joints. Probably not much conduction.
+	
+	crashTolerance = 10
 	breakingForce = 250
 	breakingTorque = 250
 	bodyLiftMultiplier = 0
@@ -117,4 +130,12 @@ PART
 	
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
+}
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-ApolloForwardHS]:AFTER[RealismOverhaul]
+{
+	@skinMaxTemp = 3000
 }
