--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaShieldMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaShieldMoroz.cfg
@@ -49,3 +49,12 @@ PART
 		explosiveNodeID = top
 	}
 }
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-DynaShieldMoroz]:AFTER[RealismOverhaul]
+{
+	@maxTemp = 1144		//Just solid Rene 41?
+	@skinMaxTemp = 1144
+}
