--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiWing.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiWing.cfg
@@ -36,9 +36,6 @@ PART
 	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
 	node_stack_top = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
 	mass = 0.5
-	thermalMassModifier = 2.25
-	heatConductivity = 0.1
-	emissiveConstant = 0.95
 	dragModelType = none
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -46,8 +43,22 @@ PART
 	crashTolerance = 8
 	breakingForce = 10
 	breakingTorque = 15
-	maxTemp = 3000
 	explosionPotential = 0.25
+	
+	//Thermal Stuff
+	//Assuming same as Dynasoar
+	//Structure and skin made of Rene 41 (max temp 1144)
+	//Belly coated with Molybdenum (max temp ~2000)
+	//Nose made of graphite
+	//Very high emissivity paint applied to maximize radiation
+	heatConductivity = 0.25		//all conductivity
+	skinInternalConductionMult = 0.005	//skin-to-int conductivity
+	skinMassPerArea = 8.25 //1 mm Rene 41
+	thermalMassModifier = 2.0
+	emissiveConstant = 0.95		//matte black
+
+	maxTemp = 773	//delicate, lower int temp
+	skinMaxTemp = 2000
 
 	CoMOffset = 0.0, -0.1, 0.2
 	mirrorRefAxis = 0, 0, 0
@@ -184,4 +195,10 @@ PART
 //	===========================================================================
 
 
-
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-GeminiWing]:AFTER[RealismOverhaul]
+{
+	@skinMaxTemp = 2000
+}
