--- a/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
@@ -66,11 +66,18 @@ PART
 	minimum_drag = 0.15
 	angularDrag = 2
 	crashTolerance = 12
-	maxTemp = 973.15
-	skinMaxTemp = 2673.15
-	emissiveConstant = 0.6
-	thermalMassModifier = 1.0
-	skinMassPerArea = 4
+	
+	//Thermal Stuff
+	//Skin made of Titanium, coated with shuttle legacy BRI-18 tiles and AFRSI blankets
+	maxTemp = 773
+	skinMaxTemp = 1533					//Approximate maximum temp of shuttle HSRI tiles
+	emissiveConstant = 0.85				//Metallicized Nomex?
+	heatConductivity = 1.0				//All conductivity. Leave this alone for now
+	thermalMassModifier = 1.0			//Thermal mass. Leave this alone for now
+	skinInternalConductionMult = 0.005	//Skin-to-int conductivity. Skin coated in shuttle-grade tiles and blankets, very well insulated
+	skinMassPerArea = 15.99				//25 mm BRI-18 tiles? Assuming at shuttle density of 9 lbs/ft^3, 15.99 kg/m^2
+	skinThermalMassModifier = 1.0		//Skin thermal mass. Leave this alone for now
+	skinSkinConductionMult = 0.005		//Skin extremely well insulated and isolated. Probably not much conduction.
 
 	//	============================================================================
 	//	Animations and Textures
@@ -399,4 +406,12 @@ PART
 			Ratio = 0.01
 		}
 	}
+}
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-CSTCM]:AFTER[RealismOverhaul]
+{
+	@skinMaxTemp = 1533
 }
