--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaAftBayMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaAftBayMoroz.cfg
@@ -171,3 +171,11 @@ PART
 		}
 	}
 }
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-DynaAdapterBigMoroz]:AFTER[RealismOverhaul]
+{
+	@skinMaxTemp = 1144
+}
