--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
@@ -43,12 +43,21 @@ PART
 	breakingForce = 72
 	breakingTorque = 72
 	crashTolerance = 20
-	skinMaxTemp = 3350
-	maxTemp = 900
-	emissiveConstant = 0.6 // shingles
 	vesselType = Ship
 	CrewCapacity = 2
 	bulkheadProfiles = size0, size1p2
+
+	//Thermal Stuff
+	//Skin made of Rene 41 shingles (max temp 1144), with beryllium shingles over hotspots (max temp 1273)
+	maxTemp = 773.15
+	skinMaxTemp = 2000					//Beryllium shingles (max temp 1273). Capsule takes a ton of flux. Tweak drag cubes? Raise this until then
+	emissiveConstant = 0.95				//Shingles coated in high emissivity ceramic paint
+	heatConductivity = 1.0				//All conductivity. Leave this alone for now
+	thermalMassModifier = 1.0			//Thermal mass. Leave this alone for now
+	skinInternalConductionMult = 0.005	//Skin-to-int conductivity. Tiles isloated from structure with spacers, and had gold coating on inside to minimize radiation.
+	skinMassPerArea = 13.15				//Beryllium 1.85 ton/m^3. 7.11 mm Beryllium, 13.15 kg/m^2?
+	skinThermalMassModifier = 1.0		//Skin thermal mass. Leave this alone for now
+	skinSkinConductionMult = 0.1		//Beryllium and Rene 41 are pretty conductive. Individual panels well isolated though.
 
 	tags = capsule pod gemini
 
@@ -72,7 +81,7 @@ PART
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0.0, 0.0, -0.06
+		DescentModeCoM = 0.0, 0.0, 0.06		//Gemini reentered "upside-down" to protect crew hatches
 	}
 
 	MODULE
@@ -404,3 +413,10 @@ PART
 	}
 }
 
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-GeminiCMBDB]:AFTER[RealismOverhaul]
+{
+	@skinMaxTemp = 2000		//Raising this until we can find a better way to deal with excess heat flux
+}
