--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryAirbrake.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryAirbrake.cfg
@@ -45,6 +45,22 @@ PART
 	bulkheadProfiles = size0
 	bodyLiftMultiplier = 0
 
+	//Thermal Stuff
+	//Skin made of Rene 41 shingles (max temp 1144)
+	//Peak temp on HS: ~2000 K
+	//Peak temp on Walls: ~977 K
+	//Peak temp on forward surfaces: ~600 K
+	//Peak interior temp: ~315 K
+	maxTemp = 1144						//Probably just solid Rene 41
+	skinMaxTemp = 1144					//Rene 41 shingles (max temp 1144)
+	emissiveConstant = 0.95				//Shingles coated in high emissivity ceramic paint
+	heatConductivity = 1.0				//All conductivity. Leave this alone for now
+	thermalMassModifier = 1.0			//Thermal mass. Leave this alone for now
+	skinInternalConductionMult = 0.01	//Just a solid piece of metal?
+	skinMassPerArea = 3.38				//Rene 41 8.24 ton/m^3. 0.41 mm Rene 41, 3.38 kg/m^2?
+	skinThermalMassModifier = 1.0		//Skin thermal mass. Leave this alone for now
+	skinSkinConductionMult = 0.1		//Rene 41 is pretty conductive, and heat sink needed to spread heat. Individual panels well isolated though.
+
 	tags = mercury aero stablizer airbrake
 
 
@@ -112,5 +128,12 @@ PART
 			}
 		}
 	}
+}
 
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-MercuryAirbrakeBDB]:AFTER[RealismOverhaul]
+{
+	@skinMaxTemp = 1144
 }
