--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -49,15 +49,25 @@ PART
 	minimum_drag = 0.15
 	angularDrag = 2
 	crashTolerance = 8
-	bodyLiftMultiplier = 0
+
+	//Thermal Stuff
+	//Skin made of Rene 41 shingles (max temp 1144)
+	//Peak temp on HS: ~2000 K
+	//Peak temp on Walls: ~977 K
+	//Peak temp on forward surfaces: ~600 K
+	//Peak interior temp: ~315 K
 	maxTemp = 773.15
-	skinMaxTemp = 2573.15
-	emissiveConstant = 0.9 // not too absorptive for reentry
-	thermalMassModifier = 1.0
-	skinMassPerArea = 2.0
+	skinMaxTemp = 1144					//Rene 41 shingles (max temp 1144)
+	emissiveConstant = 0.95				//Shingles coated in high emissivity ceramic paint
+	heatConductivity = 1.0				//All conductivity. Leave this alone for now
+	thermalMassModifier = 1.0			//Thermal mass. Leave this alone for now
+	skinInternalConductionMult = 0.005	//Skin-to-int conductivity. Tiles isloated from structure with spacers, and had gold coating on inside to minimize radiation.
+	skinMassPerArea = 3.38				//Rene 41 8.24 ton/m^3. 0.41 mm Rene 41, 3.38 kg/m^2?
+	skinThermalMassModifier = 1.0		//Skin thermal mass. Leave this alone for now
+	skinSkinConductionMult = 0.2		//Rene 41 is pretty conductive, and heat sink needed to spread heat. Individual panels well isolated though. Increase to help soak more heat from HS.
+
 	breakingForce = 250
 	breakingTorque = 250
-	skinInternalConductionMult = 6
 	vesselType = Ship
 	CrewCapacity = 1
 	bulkheadProfiles = size0, size1
@@ -65,7 +75,6 @@ PART
 	fuelCrossFeed = true
 
 	tags = mercury crew pod CM
-
 
 	EFFECTS
 	{
@@ -524,10 +533,18 @@ PART
 }
 
 //	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-MercuryCMBDB]:AFTER[RealismOverhaul]
+{
+	@skinMaxTemp = 1144
+}
+
+//	================================================================================
 //	Final Pass to Make Sure TAC does not add extra resources
 //	================================================================================
 
-@PART[ROC-MercuryCM]:BEFORE[zzzRealismOverhaul]
+@PART[ROC-MercuryCMBDB]:BEFORE[zzzRealismOverhaul]
 {
 	!RESOURCE:HAS[~name[Ablator],~name[CharredAblator]],*{}
 }
