--- a/GameData/ROCapsules/PartConfigs/Orion/OrionForwardHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionForwardHS.cfg
@@ -49,10 +49,6 @@ PART
 	minimum_drag = 0.2
 	angularDrag = 2
 	crashTolerance = 12
-	maxTemp = 1200
-	skinMaxTemp = 2000
-	thermalMassModifier = 4.0
-	heatConductivity = 0.02
 	stageAfter = True
 	stageBefore = True
 	breakingForce = 500000
@@ -61,7 +57,19 @@ PART
 	angularStrength = 9300000
 	fuelCrossFeed = True
 	bulkheadProfiles = size0 //, srf
-
+	
+	//Thermal Stuff
+	//Skin made of Titanium, coated with TUFI and AETB-8 tiles, and AFRSI blankets
+	maxTemp = 773
+	skinMaxTemp = 1533					//Approximate maximum temp of shuttle HSRI tiles
+	emissiveConstant = 0.4				//Metallicized Klapton coating?
+	heatConductivity = 1.0				//All conductivity. Leave this alone for now
+	thermalMassModifier = 1.0			//Thermal mass. Leave this alone for now
+	skinInternalConductionMult = 0.005	//Skin-to-int conductivity. Skin coated in shuttle-grade tiles and blankets, very well insulated
+	skinMassPerArea = 19.2				//25 mm TUFI tiles? Assuming at shuttle density of 12 lbs/ft^3, 19.2 kg/m^2
+	skinThermalMassModifier = 1.0		//Skin thermal mass. Leave this alone for now
+	skinSkinConductionMult = 0.005		//Skin extremely well insulated and isolated. Probably not much conduction.
+	//Unfortunately, the drag cubes are broken and the CM takes full heating from reentry.
 
 	MODULE
 	{
@@ -135,4 +143,12 @@ PART
 			}
 		}
 	}
+}
+
+//	================================================================================
+//	Override RO global settings to get our temperatures back
+//	================================================================================
+@PART[ROC-OrionForwardHS]:AFTER[RealismOverhaul]
+{
+	@skinMaxTemp = 3600		//Drag cubes are ancorrect, and CM takes full heating. Unable to refine further at the moment
 }
