Mercury Weight Overhaul
Based on data from "Design Mass Properties II", revise mass of all Mercury Components to more closely resemble their real counterparts.

Also convert Mercury CM tanks to use SM-II tanks, such that adding more tanks or batteries increases capsule dry mass.

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryAirbrake.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryAirbrake.cfg
@@ -33,8 +33,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = This small airbrake prevents the Mercury from stabilizing in a "nose-first" orientation during reentry. Attach to the offset node on the Mercury Antenna/Drogue Chute unit. Once in orbit, click the brakes action group to extend it for the rest of the mission.
 	attachRules = 1,1,0,0,0
-	//Out of mass subtracted from CM, add 18 lbs other
-	mass = 0.00816	//approx 18 lbs
+	mass = 0.008165	//~18 lbs
 	dragModelType = default
 	angularDrag = 3
 	crashTolerance = 12
