--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryDecoupler.cfg
@@ -30,7 +30,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = Decoupler for separating the Mercury capsule from a Redstone rocket.
 	attachRules = 1,0,1,1,0
-	mass = 0.112
+	mass = 0.07484		//165 lbs? (guess)
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
