--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryHS.cfg
@@ -31,7 +31,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = Small 1.89m heatshield for the Mercury capsule. Place underneath, before adding the retropack. Does not include a fairing. Comes with a built in airbag for a nice comfy landing.
 	attachRules = 1,0,1,0,0
-	mass = 0.05625
+	mass = 0.15156	//240.86 - 89.3 kg ablator
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -60,17 +60,10 @@ PART
 		restrictedNode = bottom
 		disableAfterPlaying = true
 	}
-	
-	RESOURCE
-	{
-		name = Ablator		//308 lbs ablator
-		amount = 139
-		maxAmount = 139
-	}
 
 	//use new heat shield tagging system to configure the shield instead
 	heatShieldDiameter = 1.89
 	heatShieldTag = Mercury
 	resetHeatShieldAblator = true
-	resetHeatShieldMass = true
+	resetHeatShieldMass = false
 }
