--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
@@ -32,8 +32,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = This nose cap for the Mercury capsule includes the drogue chute and the main antenna. It has an attach node for a destabilizing flap. The latter might not accomplish much but its theorized to help self orient a reentering craft and its nice to have.
 	attachRules = 1,0,1,1,0
-	//Out of mass subtracted from CM, add 37 lbs nose antenna struct, 27 lbs antenna, 8 lbs antenna misc
-	mass = 0.0326		//approx 72 lbs
+	mass = 0.03158	//32.66 kg - 1.08 kg added by RealChute?
 	dragModelType = default
 	angularDrag = 3
 	crashTolerance = 12
@@ -116,7 +115,7 @@ PART
 		minAirPressureToOpen = 0.01
 		clampMinAirPressure = 0.01
 		deployAltitude = 7000
-		deploymentSpeed = 0.125
+		deploymentSpeed = 2
 		semiDeploymentSpeed = 1 //0.125
 		chuteMaxTemp = 1600
 		machHeatMultBase = 0.25
@@ -126,7 +125,7 @@ PART
 	MODULE:NEEDS[RealChute]
 	{
 		name = RealChuteModule
-		caseMass = 0.0315
+		caseMass = 0.03158
 		mustGoDown = True
 		spareChutes = 1
 		cutSpeed = 0.5
@@ -145,7 +144,7 @@ PART
 			preDeploymentSpeed = 2
 			minDeployment = 7000
 			deployedDiameter = 5
-			deploymentSpeed = 0.125
+			deploymentSpeed = 2
 			deploymentAlt = 7000
 			cutAlt = 0
 		}
@@ -231,13 +230,17 @@ PART
 	}
 }
 
-@PART[ROC-MercuryNoseCapBDB]:AFTER[RealChute]:NEEDS[RealAntennas|RealChute]
+@PART[ROC-MercuryNoseCapBDB]:AFTER[RealAntennas]:NEEDS[RealAntennas&RealChute]
 {
-	@mass -= 0.008		//subtract antenna mass because RA adds antenna mass. Do it after realchute because realchute messes with mass too
+	@mass -= 0.0203		//subtract antenna mass because RA adds antenna mass.
+	@MODULE[RealChuteModule]
+	{
+		@caseMass -= 0.0203
+	}
 }
-@PART[ROC-MercuryNoseCapBDB]:AFTER[RealAntennas]:NEEDS[RealAntennas|!RealChute]
+@PART[ROC-MercuryNoseCapBDB]:AFTER[RealAntennas]:NEEDS[RealAntennas&!RealChute]
 {
-	@mass -= 0.008		//Otherwise subtract mass whenever
+	@mass -= 0.0203		//Otherwise subtract mass whenever
 }
 
 @PART[ROC-MercuryNoseCapBDB]:AFTER[zzzRealismOverhaul]
