--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
@@ -41,8 +41,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = This part contains four way RCS thrusters to help orient the Mercury capsule and the main parachute.
 	attachRules = 1,0,1,1,0
-	//Out of mass subtracted from CM, add 36 lbs parachute struct, 152 lbs RCS, 157 lbs chutes, 
-	mass = 0.1565		//345 lbs approx, subtract 16.6 kgs added by realchute?
+	mass = 0.1104		//127.01 kg, subtract 16.61 kgs added by realchute?
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -127,7 +126,7 @@ PART
 	MODULE:NEEDS[RealChute]
 	{
 		name = RealChuteModule
-		caseMass = 0.1398
+		caseMass = 0.1104
 		mustGoDown = True
 		spareChutes = 1
 		cutSpeed = 0.5
