--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetro.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetro.cfg
@@ -25,7 +25,7 @@ PART
 	manufacturer = Thiokol
 	description = The Mercury retro motor, intended to deorbit the capsule. Place 3 on the Mercury Retropack. These were fired in sequence at five second intervals.
 	attachRules = 1,1,0,0,0
-	mass = 0.00902		//19.06 lbs case and nozzle, 0.82 lbs ignitors
+	mass = 0.00936		//20.63 lbs
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
