--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
@@ -7,6 +7,84 @@ PART
 
 	RSSROConfig = true
 
+	//	================================================================================
+	//Source for all Mercury Masses: http://www.alternatewars.com/BBOW/Space/JSC-26098_Design_Mass_Properties_II.pdf
+	//	================================================================================
+	//Mercury Retro Module dry mass breakdown:
+	//	================================================================================
+	//Retropack: 47.41 lbs
+	//	Structure: 27.98 lbs
+	//		Structural Installation: 27.71 lbs
+	//		Paint: 0.27 lbs
+	//	Propulsion: 2.17 lbs
+	//		Retention Straps: 2.17 lbs
+	//	Power: 13.10 lbs
+	//		Retro Package Circuitry: 10.21 lbs
+	//		Circuitry Shielding: 2.89 lbs
+	//	Other: 4.16 lbs
+	//		Actual Weight Adjustment: 4.16 lbs
+	//	================================================================================
+	//Retro: 61.89 lbs
+	//	Propulsion: 61.89 lbs
+	//		Case & Nozzle: 57.18 lbs
+	//		Igniters: 2.46 lbs
+	//		Heaters: 2.25 lbs
+	//	================================================================================
+	//Posigrade: 16.05 lbs
+	//	Other: 16.05 lbs
+	//		Posigrade Rockets: 16.05 lbs
+	//	================================================================================
+	//TOTAL DRY MASS: 125.35 lbs
+	//	Structure: 27.98 lbs
+	//	Propulsion: 64.06 lbs
+	//	Power: 13.10 lbs
+	//	Other: 20.21 lbs
+
+	//	================================================================================
+	//Mercury Retro Module Inert Mass Breakdowns
+	//	================================================================================
+	//INERT MASS: 0 lbs
+
+	//TOTAL INERT MASS: 125.35 lbs
+
+	//	================================================================================
+	//Mercury Reentry Module Wet Mass Breakdowns
+	//	================================================================================
+	//Retro: 144.74 lbs
+	//	Propellant: 144.74 lbs
+	//WET MASS: 144.74 lbs
+
+	//TOTAL GROSS MASS: 270.09 lbs
+
+	//	================================================================================
+	//Ultimate Part Mass Assignments:
+	//	================================================================================
+	//	Retropack: 47.41 lbs (21.50 kg)
+	//		Dry Mass: 47.41 lbs
+	//	================================================================================
+	//	Retro: 20.63 lbs (9.36 kg) (x3)
+	//		Dry Mass: 20.63 lbs (x3)
+	//	================================================================================
+	//	Posigrade: 1.12 lbs (0.51 kg) (x3) (removing 4.23 lbs propellant)
+	//		Dry Mass: 1.12 lbs (x3)
+	//	================================================================================
+	//INERT MASS: 125.35 lbs (56.86 kg)
+
+	//	================================================================================
+	//Ultimate Part Resource Assignments:
+	//	================================================================================
+	//Retro: 12.57 L (x3)
+	//	Propellant: 12.57 L
+	//		PSPC: 12.57 L
+	//Posigrade: 1.103 L (x3)
+	//	Propellant: 1.103 L
+	//		PSPC: 1.103 L
+
+	//	================================================================================
+	//Tank Mass Compensation
+	//	================================================================================
+	//	N/A
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_Retropack
@@ -37,7 +115,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = This metal tub attaches to the bottom of the Mercury heatshield, allowing retro solids to be mounted. Decoupling will release the straps to separate from the capsule for reentry. Note that this is purely a structural unit - no propulsion is included.
 	attachRules = 1,0,1,1,0
-	mass = 0.02253		//27.98 lbs structure, 2.17 lbs straps, 13.1 lbs circuitry, 2.25 heaters, 4.16 lbs misc
+	mass = 0.02150		//47.41 lbs
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
@@ -101,6 +179,5 @@ PART
 			name = Enhanced
 			transform = Enhanced
 		}
-
 	}
 }
