--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryLES.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryLES.cfg
@@ -6,6 +6,77 @@ PART
 
 	RSSROConfig = true
 
+	//	================================================================================
+	//Source for all Mercury Masses: http://www.alternatewars.com/BBOW/Space/JSC-26098_Design_Mass_Properties_II.pdf
+	//	================================================================================
+	//Mercury Launch Escape System dry mass breakdown:
+	//	================================================================================
+	//Launch Escape System: 798.41 lbs
+	//	Structure: 164.17 lbs
+	//		Truss: 118.76 lbs
+	//		Attach Ring: 11.32 lbs
+	//		Separation Ring and Cover: 34.09 lbs
+	//	TPS: 22.39 lbs
+	//		Heat Protection: 22.39 lbs
+	//	Propulsion: 356.30 lbs
+	//		Motor Case: 356.30 lbs
+	//	Power: 21.95 lbs
+	//		Launch Escape Sys Sep: 1.82 lbs
+	//		Escape Rocket Fire: 1.17 lbs
+	//		Pylon Jettison Fire: 0.076 lbs
+	//		Electrical Tunnels: 9.14 lbs
+	//		Electrical Installation: 9.06 lbs
+	//	Other: 233.60 lbs
+	//		Aerodynamic Spike: 25.70 lbs
+	//		Ballast: 185.17 lbs
+	//		Pylon Jettison Rocket: 22.73 lbs
+	//	================================================================================
+	//TOTAL DRY MASS: 798.41 lbs
+	//	Structure: 164.17 lbs
+	//	TPS: 22.39 lbs
+	//	Propulsion: 356.30 lbs
+	//	Power: 21.95 lbs
+	//	Avionics: 0 lbs
+	//	Enviromental: 0 lbs
+	//	Other: 233.60 lbs
+
+	//	================================================================================
+	//Mercury Launch Escape System Inert Mass Breakdowns
+	//	================================================================================
+	//INERT MASS: 0 lbs
+
+	//TOTAL INERT MASS: 798.41 lbs
+
+	//	================================================================================
+	//Mercury Launch Escape System Wet Mass Breakdowns
+	//	================================================================================
+	//	Propellant: 293.20 lbs (132.99 kg)
+	//WET MASS: 293.20 lbs
+
+	//TOTAL GROSS MASS: 1091.61 lbs
+
+	//	================================================================================
+	//Ultimate Part Mass Assignments:
+	//	================================================================================
+	//	LES: 798.41 lbs (362.15 kg)
+	//		Dry Mass: 798.41 lbs
+	//	================================================================================
+	//INERT MASS: 798.41 lbs (362.15 kg)
+
+	//	================================================================================
+	//Ultimate Part Resource Assignments:
+	//	================================================================================
+	//LES: 76.4 L
+	//	Propellant: 76.4 L
+	//		PSPC: 76.4 L
+	//TOTAL TANK SIZE (NO LS): 76.4 L
+	//TOTAL TANK SIZE (W/ LS): 76.4 L
+
+	//	================================================================================
+	//Tank Mass Compensation
+	//	================================================================================
+	//	N/A
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_LES
@@ -26,8 +97,7 @@ PART
 	manufacturer = Grand Central Rocket Company
 	description = This solid rocket tower is designed to wrench the command pod up and away from a malfunctioning rocket. Use only in case of emergency. WARNING: Staging the LES will also decouple it from the bottom node, in order to dispose of it after launch. Map the engine to the ABORT action group for emergency use.
 	attachRules = 1,0,1,1,0
-	//Gross weight 1091.61 lbs. Subtract 293.2 lbs for propellant
-	mass = 0.3622		//weight 798.41 lbs
+	mass = 0.36215		//weight 798.41 lbs
 	// heatConductivity = 0.04 // 1/3 default
 	dragModelType = default
 	maximum_drag = 0.3
